[package]
name = "xtm_rust"
version = "0.1.0"
authors = ["Oleg Utkin <o.utkin@corp.mail.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { version = "3.0", default-features = false }
async-channel = "2.3"
thiserror = "1.0"
libc = "0.2"
crossbeam-utils = "0.8"
serde = "1.0"

[dependencies.mlua]
version = "0.7"
features = ["luajit", "serialize", "vendored"]

[dependencies.tokio]
version = "1"
features = [
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time"
]

[workspace]
members = [
    "examples/simple",
    "examples/bench",
    "examples/grpc",
]

[profile.release]
lto = true
codegen-units = 1
