[package]
name = "xtm_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { version = "8.0.0", default-features = false }
async-channel = "2.5"
thiserror = "2.0"
libc = "0.2"
crossbeam-utils = "0.8"
serde = "1.0"

luajit-src = "=210.5.12"

[dependencies.mlua]
version = "=0.8.0-beta.3"
features = ["luajit", "serialize", "vendored"]

[dependencies.tokio]
version = "1"
features = [
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time"
]

[workspace]
members = [
    "examples/simple",
    "examples/bench",
    "examples/grpc",
]

[profile.release]
lto = true
codegen-units = 1
