[package]
name = "bench"
version = "0.1.0"
authors = ["Oleg Utkin <o.utkin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hdrhistogram = "7.2"
tokio = "1"

[dependencies.mlua]
version = "0.7"
features = ["luajit", "module", "serialize", "vendored"]

[dependencies.xtm_rust]
path = "../.."

[lib]
name = "bench"
crate-type = ["cdylib"]
