[package]
name = "bench"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hdrhistogram = "7.5"
tokio = "1"

[dependencies.mlua]
version = "0.11.3"
features = ["luajit", "serialize", "module"]

[dependencies.xtm_rust]
path = "../.."

[lib]
name = "bench"
crate-type = ["cdylib"]
