[package]
name = "grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
tonic = "0.4"
prost = "0.7"
tarantool = { version = "0.6", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.mlua]
version = "0.8"
features = ["luajit", "module", "serialize", "vendored"]

[dependencies.xtm_rust]
path = "../.."

[build-dependencies]
tonic-build = "0.4"

[lib]
name = "grpc"
crate-type = ["cdylib"]
