[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tarantool = { version = "8.0.0", default-features = false }
uuid = { version = "1.8", features = ["serde", "v4"] }

[dependencies.mlua]
version = "0.11.3"

features = ["luajit", "module", "serialize"]

[dependencies.xtm_rust]
path = "../.."

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "grpc"
crate-type = ["cdylib"]
