[package]
name = "simple"
version = "0.1.0"
authors = ["Oleg Utkin <o.utkin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { version = "0.4", default-features = false }
serde = "1.0"
futures = "0.3"

[dependencies.mlua]
version = "0.6"
features = ["luajit", "module", "serialize", "vendored"]

[dependencies.tokio]
version = "1"
features = ["net", "full"]

[dependencies.xtm_rust]
path = "../.."

[lib]
name = "simple"
crate-type = ["cdylib"]
