[package]
name = "simple"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { version = "8.0.0", default-features = false }
serde = "1.0"

[dependencies.mlua]
version = "=0.8.0-beta.3"
features = ["luajit", "module", "serialize", "vendored"]

[dependencies.xtm_rust]
path = "../.."

[lib]
name = "simple"
crate-type = ["cdylib"]
