[package]
name = "simple"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { version = "8.0.0", default-features = false }
serde = "1.0"

[dependencies.mlua]
version = "0.11.3"
features = ["luajit", "serialize", "module"]

[dependencies.xtm_rust]
path = "../.."

[lib]
name = "simple"
crate-type = ["cdylib"]
